--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     ]
   },
   "devDependencies": {
+    "typescript": "5.2.2",
     "@types/file-saver": "^2.0.5",
     "react-router-dom": "^6.16.0"
   }
